fixed undefined subtasks error on production, aligned empty board message

--- a/src/ui/Board/Board.module.css
+++ b/src/ui/Board/Board.module.css
@@ -12,6 +12,8 @@
 .board {
 	display: flex;
 	gap: 24px;
-	min-height: 100%;
 	width: fit-content;
+	height: fit-content;
+	min-width: 100%;
+	min-height: 100%;
 }
